--- a/Draw/Dice/Controller/Settings/CustomDiceSettingCell~ipad.xib
+++ b/Draw/Dice/Controller/Settings/CustomDiceSettingCell~ipad.xib
@@ -88,7 +88,7 @@
 							<object class="IBUILabel" id="772317120">
 								<reference key="NSNextResponder" ref="946753982"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{119, 71}, {511, 54}}</string>
+								<string key="NSFrame">{{119, 71}, {495, 54}}</string>
 								<reference key="NSSuperview" ref="946753982"/>
 								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -234,9 +234,44 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">CustomDiceSettingCell</string>
 					<string key="superclassName">PPTableViewCell</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="DiceDescriptionLabel">HKGirlFontLabel</string>
+						<string key="DiceImageView">UIImageView</string>
+						<string key="DiceTitleLabel">HKGirlFontLabel</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="DiceDescriptionLabel">
+							<string key="name">DiceDescriptionLabel</string>
+							<string key="candidateClassName">HKGirlFontLabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="DiceImageView">
+							<string key="name">DiceImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="DiceTitleLabel">
+							<string key="name">DiceTitleLabel</string>
+							<string key="candidateClassName">HKGirlFontLabel</string>
+						</object>
+					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/CustomDiceSettingCell.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">FontLabel</string>
+					<string key="superclassName">UILabel</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/FontLabel.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">HKGirlFontLabel</string>
+					<string key="superclassName">FontLabel</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/HKGirlFontLabel.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
