--- a/Draw/Dice/View/DiceBetView/DiceBetView~ipad.xib
+++ b/Draw/Dice/View/DiceBetView/DiceBetView~ipad.xib
@@ -42,7 +42,6 @@
 						<int key="NSvFlags">283</int>
 						<string key="NSFrame">{{24, 24}, {569, 376}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="497256929"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -53,7 +52,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{86, 292}, {196, 82}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="539270328"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -87,7 +85,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{106, 304}, {56, 60}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="183914380"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -102,7 +99,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{176, 292}, {86, 48}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="450434552"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -134,7 +130,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{176, 332}, {102, 42}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="290859918"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -163,7 +158,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{186, 50}, {238, 42}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="932901105"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -192,7 +186,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{557, 0}, {56, 56}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="206223514"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -217,7 +210,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{82, 110}, {442, 94}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="937968453"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -240,7 +232,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{82, 210}, {96, 60}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="297350656"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -261,7 +252,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{176, 215}, {46, 50}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="917748991"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -276,7 +266,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{258, 218}, {102, 42}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="755719260"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -297,7 +286,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{314, 292}, {196, 82}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="330434247"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -318,7 +306,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{334, 304}, {56, 60}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="694377089"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -333,7 +320,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{404, 292}, {86, 48}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1002676463"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -355,7 +341,7 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{404, 332}, {102, 42}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
-						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -376,7 +362,6 @@
 						<int key="NSvFlags">319</int>
 						<string key="NSFrame">{{228, 218}, {26, 42}}</string>
 						<reference key="NSSuperview" ref="42690186"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="521682707"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -395,7 +380,6 @@
 				</array>
 				<string key="NSFrameSize">{613, 400}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="558577044"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -685,6 +669,7 @@
 				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="11.CustomClassName">HKGirlFontLabel</string>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="12.CustomClassName">UIGlossyButton</string>
 				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="14.CustomClassName">HKGirlFontLabel</string>
@@ -692,6 +677,7 @@
 				<string key="15.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="16.CustomClassName">HKGirlFontLabel</string>
 				<string key="16.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="21.CustomClassName">UIGlossyButton</string>
 				<string key="21.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="22.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="23.CustomClassName">HKGirlFontLabel</string>
@@ -717,93 +703,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">40</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">DiceBetView</string>
-					<string key="superclassName">UIView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="anteCoinsLabel">HKGirlFontLabel</string>
-						<string key="anteLabel">HKGirlFontLabel</string>
-						<string key="betLoseButton">UIButton</string>
-						<string key="betWinButton">UIButton</string>
-						<string key="bgImageView">UIImageView</string>
-						<string key="loseLabel">HKGirlFontLabel</string>
-						<string key="loseOddsLabel">HKGirlFontLabel</string>
-						<string key="noteLabel">HKGirlFontLabel</string>
-						<string key="titleLabel">HKGirlFontLabel</string>
-						<string key="winLabel">HKGirlFontLabel</string>
-						<string key="winOddsLabel">HKGirlFontLabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="anteCoinsLabel">
-							<string key="name">anteCoinsLabel</string>
-							<string key="candidateClassName">HKGirlFontLabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="anteLabel">
-							<string key="name">anteLabel</string>
-							<string key="candidateClassName">HKGirlFontLabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="betLoseButton">
-							<string key="name">betLoseButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="betWinButton">
-							<string key="name">betWinButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="bgImageView">
-							<string key="name">bgImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="loseLabel">
-							<string key="name">loseLabel</string>
-							<string key="candidateClassName">HKGirlFontLabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="loseOddsLabel">
-							<string key="name">loseOddsLabel</string>
-							<string key="candidateClassName">HKGirlFontLabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="noteLabel">
-							<string key="name">noteLabel</string>
-							<string key="candidateClassName">HKGirlFontLabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">HKGirlFontLabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="winLabel">
-							<string key="name">winLabel</string>
-							<string key="candidateClassName">HKGirlFontLabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="winOddsLabel">
-							<string key="name">winOddsLabel</string>
-							<string key="candidateClassName">HKGirlFontLabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/DiceBetView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">FontLabel</string>
-					<string key="superclassName">UILabel</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/FontLabel.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">HKGirlFontLabel</string>
-					<string key="superclassName">FontLabel</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HKGirlFontLabel.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
